[package]
name = "open-packet-guard"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
env_logger = "0.11.5"
iptables = "0.5.2"
log = "0.4.22"
pcap = "2.2.0"
pnet = "0.35.0"
procfs = "0.16.0"
ratatui = "0.28.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
